--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "projet 3 d'openclassrooms",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main-resto.scss:./css/style-resto.css",
+    "sass": "sass --watch ./sass/main.scss:./css/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css"
   },
   "repository": {
