--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./sass/main.scss:./css/style.css",
-    "prefix": "postcss ./css/style.css --use autoprefixer -d ./css"
+    "prefix": "postcss ./css/style-resto.css --use autoprefixer -d ./css"
   },
   "repository": {
     "type": "git",
